--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -80,6 +80,8 @@
     display: flex;
     margin-right: 20px;
     /* color: white; */
+    /* color: red; */
+    /* color: green; */
       color: black !important;
     font-size: 17px;
     font-weight: 600;
